--- a/src/app/home/info-edit/info-edit.page.html
+++ b/src/app/home/info-edit/info-edit.page.html
@@ -1,9 +1,12 @@
 <ion-header>
-  <ion-toolbar style="--background: #1a2226">
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button color="light"></ion-back-button>
     </ion-buttons>
     <ion-title color="light">Edit Info</ion-title>
+    <ion-buttons slot="primary">
+      <ion-menu-button color="light" menu="side-menu"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
