--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         <ion-content>
           <ion-list *ngFor="let pages of navigate">
           <ion-menu-toggle auto-hide="true">
-            <ion-item [routerLink]="pages.url" routerDirection="forward">
+            <ion-item [routerLink]="pages.url" routerDirection="forward" (click)="logOut(pages.logout)">
                 <ion-icon [name]="pages.icon" slot="start"></ion-icon>
                    {{pages.title}}
             </ion-item>
