--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -150,3 +150,18 @@ ion-item,ion-list,ion-radio-group
   align-items: center;
   padding-top: 5%;
 }
+
+.rememberMe
+{
+  padding: 0% 15% 0% 10%;
+}
+
+ion-checkbox {
+  --size: 20px;
+  --background-checked: #6815ec;
+}
+
+ion-checkbox::part(container) {
+  border-radius: 6px;
+  border: 2px solid #6815ec;
+}
