--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,15 +14,19 @@
     </div>
     <div class="text_details">
       <div>
-        <label>Name<b>:</b></label>
+        <label translate="NAME"><b>:</b></label>
+
+        <!--to send params with key  -->
+        <!-- <label translate="TITLE_2" [translateParams]="{value: 'John'}"><b>:</b></label>  -->
+
         <span>{{name}}</span>
       </div>
       <div>
-        <label>DOB<b>:</b></label>
+        <label translate="DOB"><b>:</b></label>
         <span>{{dob}} years old</span>
       </div>
       <div>
-        <label>Gender<b>:</b></label>
+        <label translate="GENDER"><b>:</b></label>
         <span>{{gender}}</span>
       </div>
     </div>
